--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,17 +4,18 @@ server.port=8083
 spring.profiles.active=local
 #kafka Producer
 spring.kafka.template.default-topic= transaction-events
-spring.kafka.producer.bootstrap-servers= servicekafka:9092
+#spring.kafka.consumer.bootstrap-servers= servicekafka:9092
+spring.kafka.consumer.bootstrap-servers=52.12.189.218:9092
 spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.IntegerSerializer
 spring.kafka.producer.value-serializer= org.apache.kafka.common.serialization.StringSerializer
-spring.kafka.admin.properties.bootstrap.servers=servicekafka:9092
+spring.kafka.admin.properties.bootstrap.servers=52.12.189.218:9092
 #-----
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
-spring.datasource.url=jdbc:mysql://microservicio-mysql8:3306/db_prestamos
+spring.datasource.url=jdbc:mysql://database-mysqlaforo255.cxphengmgqsl.us-west-2.rds.amazonaws.com:3306/db_prestamos
 #spring.datasource.url=jdbc:mysql://localhost:3307/db_prestamos
-spring.datasource.username=root
-spring.datasource.password=123456
+spring.datasource.username=admin
+spring.datasource.password=1a.2b.3c.
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=create
